Project set up and coded
The C-Loop coding project has been set up and coded.

--- a/app.html
+++ b/app.html
@@ -54,7 +54,7 @@
                 <div class="col col-lg-4 border-end border-2">
                     <h1>C-Loop: A Coding Project</h1>
                     <h4 class="lead">
-                        Live life one loop at a time. A JavaScript coding exercise using loops. Write a program that displays the numbers from 0 to 100 and display the even numbers in <strong>BOLD</strong>.
+                        Live life one loop at a time. A JavaScript coding exercise using loops. Write a program that displays the numbers from 0 to 100 and highlight the even numbers in <span class="evenNumber">red</span> and display them in <strong>BOLD</strong>.
                     </h4>
                     <h2 class="mt-5 border-bottom border-2">Instructions</h2>
                     <p>Enter a starting value and a ending value. Press the button and the values will appear.</p>
@@ -114,6 +114,9 @@
 
     <!-- Bootstrap JS -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-/bQdsTh/da6pkI1MST/rWKFNjaCP5gBSY4sEBT38Q/9RBh9AH40zEOg7Hlq2THRZ" crossorigin="anonymous"></script>
-    <script src="js/site.js"></script>    
+    <script src="js/site.js"></script>
+    <script>
+        document.getElementById("btnSubmit").addEventListener("click", getValues);
+    </script>   
 </body>
 </html>
