A few small bugfixes

--- a/app.html
+++ b/app.html
@@ -54,7 +54,7 @@
                 <div class="col col-lg-4 border-end border-2">
                     <h1>C-Loop: A Coding Project</h1>
                     <h4 class="lead">
-                        Live life one loop at a time. A JavaScript coding exercise using loops. Write a program that displays the numbers from 0 to 100 and highlight the even numbers in <span class="evenNumber">red</span> and display them in <strong>BOLD</strong>.
+                        Live life one loop at a time. A JavaScript coding exercise using loops. Write a program that displays the numbers from any given value to any given value and highlights the even numbers in <strong>BOLD</strong> <span class="evenNumber">orange</span>.
                     </h4>
                     <h2 class="mt-5 border-bottom border-2">Instructions</h2>
                     <p>Enter a starting value and a ending value. Press the button and the values will appear.</p>
