--- a/index.html
+++ b/index.html
@@ -54,8 +54,7 @@
                 <div class="col order-last order-lg-first">
                     <h1 class="display-5 fw-bold lh-1 mb-3">C-Loop: A Coding Project</h1>
                     <h4 class="lead">
-                        Project description placeholder. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-                        <strong>BOLD.</strong>
+                        A simple JavaScript coding exercise using loops. This is a program that displays the numbers from any given value to any given value and highlights the even numbers in <strong>BOLD</strong> <span class="evenNumber">orange</span>.
                     </h4>
                     <ul class="fa-ul pt-2 checklist">
                         <li><span class="fa-li"><i class="fas fa-check-square"></i></span>CSS and Bootstrap Layout</li>
