Fixed links and primary and secondary colors

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                         <a class="nav-link" target="_blank" href="https://github.com/marcm-pro/C-Loop">GitHub Repository</a>
                     </li>                
                     <li class="nav-item">
-                        <a class="nav-link" target="_blank" href="#">About</a>
+                        <a class="nav-link" target="_blank" href="https://marcm.pro">About</a>
                     </li>
                 </ul>
             </div>
@@ -101,10 +101,10 @@
                 </div>
                 <div class="col d-flex align-items-center justify-content-center justify-content-lg-end">
                     <div class="row">
-                        <div class="col social"><a href="#" target="_blank"><i class="fab fa-linkedin fa-2x"></i></a></div>
-                        <div class="col social"><a href="https://github.com/marcm-pro" target="_blank"><i class="fab fa-github fa-2x"></i></a></div>
-                        <div class="col social"><a href="https://twitter.com/marcmironescu" target="_blank"><i class="fab fa-twitter fa-2x"></i></a></div>
-                        <div class="col social"><a href="#" target="_blank"><i class="fab fa-youtube fa-2x"></i></a></div>
+                        <div class="col social"><a href="https://www.linkedin.com/in/marcmironescu/" target="_blank"><i class="fab fa-linkedin fa-2x"></i></a></div>
+                        <div class="col social"><a href="https://github.com/marcm-pro/" target="_blank"><i class="fab fa-github fa-2x"></i></a></div>
+                        <div class="col social"><a href="https://twitter.com/marcmironescu/" target="_blank"><i class="fab fa-twitter fa-2x"></i></a></div>
+                        <div class="col social"><a href="https://www.youtube.com/channel/UCl0BS28Coic4KWnatXuLWtQ" target="_blank"><i class="fab fa-youtube fa-2x"></i></a></div>
                     </div>
                 </div>
             </div>
